# nesion

./: .gitignore
.github/ISSUE_TEMPLATE/: architecture_request.md  bug_report.md
nesion/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
nesion/.github/workflows/: ci.yml
nesion/docs/: ARCHITECTURE.md  CONTRIBUTING.md
nesion/nesion/: __init__.py  cli.py  config.py  engine.py
nesion/nesion/core/: __init__.py  attention_hook.py  h2o_eviction.py  utils.py
nesion/scripts/: benchmark.py  profile_memory.py  stress_test.py
nesion/tests/: __init__.py  conftest.py  test_benchmarks.py  test_engine.py  test_eviction.py
nesion/web/: index.html
