[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nesion"
version = "0.1.0"
description = "Production-grade KV-Cache Eviction Engine for Hugging Face LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nesion Engineering", email = "engineering@nesion.ai" }
]
keywords = ["llm", "kv-cache", "vram", "optimization", "pytorch", "transformers", "h2o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/organization/nesion"
Documentation = "https://github.com/organization/nesion/docs"
Repository = "https://github.com/organization/nesion.git"
Issues = "https://github.com/organization/nesion/issues"
Changelog = "https://github.com/organization/nesion/blob/main/CHANGELOG.md"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "rouge-score>=0.1.2",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "types-tqdm"
]

[project.scripts]
nesion-bench = "scripts.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["nesion"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["PLR0913", "PLR0912"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']
